--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ statistics, optimization and reinforcement learning. </p>
 <li><p>G. Li, Y. Wei, Y. Chi, Y. Gu,  <u>Y. Chen</u>,  <a href="publications/SoftmaxPG_LB.pdf">&ldquo;Softmax policy gradient methods can take exponential time to converge,&rdquo;</a> 2021 (accepted in part to COLT 2021). <a href="slides/Softmax_Lower_Bound_slides.pdf">[slides]</a>
 </p>
 </li>
-<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning Minimax Optimal? A Tight Sample Complexity Analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
+<li><p>G. Li, C. Cai, <u>Y. Chen</u>, Y. Gu, Y. Wei, Y. Chi, <a href="publications/SyncQlearning.pdf">&ldquo;Is Q-Learning minimax optimal? A tight sample complexity analysis,&rdquo;</a> 2021 (accepted in part to ICML 2021). 
 </p>
 </li>
 <li><p>S. Cen, C. Cheng, <u>Y. Chen</u>, Y. Wei, Y. Chi,  <a href="publications/NPG_reg.pdf">&ldquo;Fast global convergence of natural policy gradient methods with entropy regularization,&rdquo;</a> accepted to <i>Operations Research</i>, 2021 <b>(INFORMS George Nicholson award finalist, 2021)</b>. <a href="publications/NPG_reg.pdf">[paper]</a><a href="slides/EntropyNPG_slides.pdf">[slides]</a>
@@ -161,7 +161,7 @@ statistics, optimization and reinforcement learning. </p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-13 14:44:29 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-13 14:48:04 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="index.jemdoc">source</a>)
 </div>
 </div>
