--- a/Group.html
+++ b/Group.html
@@ -34,23 +34,19 @@
 
 </script>
 <h1>Research Group </h1>
-<h2>Current Ph.D. students &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
+<h2>Current PhD students and postdocs &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE, co-advised with Jianqing Fan)</p>
+<li><p>Yanxi Chen (ECE PhD student, co-advised with Vincent Poor)</p>
 </li>
-<li><p>Yanxi Chen (ECE, co-advised with Vincent Poor)</p>
+<li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a> (postdoc, co-advised with Yuting Wei)</p>
 </li>
-<li><p>Jack Ji (ECE, co-advised with Mengdi Wang)
-</p>
+<li><p>Jack Ji (ECE PhD student, co-advised with Mengdi Wang)</p>
 </li>
-</ul>
-<h2>Postdocs </h2>
-<ul>
-<li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a></p>
+<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student, co-advised with Jianqing Fan)</p>
 </li>
-<li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (co-advised with Jason Lee)</p>
+<li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (postdoc, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a></p>
+<li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a> (postdoc)</p>
 </li>
 </ul>
 <h2>Alumni </h2>
@@ -75,7 +71,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-13 14:48:05 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-24 16:26:57 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
