--- a/Group.html
+++ b/Group.html
@@ -33,16 +33,16 @@
   ga('send', 'pageview');
 
 </script>
-<h1>Research Group </h1>
-<h2>Current PhD students and postdocs &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
+<h1>PhD students and postdocs </h1>
+<h2>Current &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</h2>
 <ul>
-<li><p>Yanxi Chen (ECE PhD student, co-advised with Vincent Poor)</p>
+<li><p>Yanxi Chen (ECE PhD student at Princeton, co-advised with Vincent Poor)</p>
 </li>
 <li><p><a href="https://scholar.google.com/citations?user=JS-_0nUAAAAJ&amp;hl=en">Gen Li</a> (Postdoc, co-advised with Yuting Wei)</p>
 </li>
-<li><p>Jack Ji (ECE PhD student, co-advised with Mengdi Wang)</p>
+<li><p>Jack Ji (ECE PhD student at Princeton, co-advised with Mengdi Wang)</p>
 </li>
-<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student, co-advised with Jianqing Fan)</p>
+<li><p><a href="https://yulingy.mycpanel.princeton.edu/">Yuling Yan</a> (ORFE PhD student at Princeton, co-advised with Jianqing Fan)</p>
 </li>
 <li><p><a href="https://sites.google.com/usc.edu/qyu">Qian Yu</a> (Postdoc, co-advised with Jason Lee)</p>
 </li>
@@ -51,11 +51,11 @@
 </ul>
 <h2>Alumni </h2>
 <ul>
-<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Assistant professor of statistics, University of Chicago)</p>
+<li><p><a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> (Postdoc at UPenn)</p>
+</li>
+<li><p><a href="https://congma1028.github.io/">Cong Ma</a> (Assistant professor, Department of Statistics, University of Chicago)</p>
 </li>
 <li><p><a href="https://sites.google.com/site/pyangece/">Pengkun Yang</a>  (Assistant professor, Center for Statistical Science, Tsinghua University)</p>
-</li>
-<li><p><a href="http://www.princeton.edu/~ccai/">Changxiao Cai</a> (Postdoc at UPenn)</p>
 </li>
 </ul>
 <h2>Other student visitors</h2>
@@ -71,7 +71,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-11-24 16:27:52 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-11-24 16:34:58 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
