--- a/Publications_year.html
+++ b/Publications_year.html
@@ -35,6 +35,10 @@
 </script>
 <h1>Publications </h1>
 <h2>Monographs and overview articles</h2>
+
+<table class="imgtable"><tr><td>
+<img src="images/spectral-methods-FnT.jpeg" alt="alt text" width="100 px" height="IMGLINKTARGET" />&nbsp;</td>
+<td align="left"><p>
 <ol>
 <li><p><b>Spectral Methods for Data Science: A Statistical Perspective</b> <br />  <u>Y. Chen</u>, Y. Chi, J. Fan, C. Ma, <i>Foundations and Trends in Machine Learning</i>, vol. 14, no. 5, pp. 566–806, 2021. <a href="publications/SpectralMethods.pdf">[Arxiv]</a><a href="https://www.nowpublishers.com/article/Details/MAL-079">[FnT link]</a> 
 </p>
@@ -42,6 +46,9 @@
 <li><p><b>Nonconvex Optimization Meets Low-Rank Matrix Factorization: An Overview</b>  <br />  Y. Chi, Y. Lu, <u>Y. Chen</u>, <i>IEEE Transactions on Signal Processing</i>, vol. 67, no. 20, pp. 5239-5269, October 2019 <b>(invited overview article)</b>.  <a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?tp=&amp;arnumber=8811622">[TSP version]</a><a href="publications/NcxOverview_Arxiv.pdf">[Arxiv]</a><a href="slides/Nonconvex_overview_slides.pdf">[slides]</a></p>
 </li>
 </ol>
+</p>
+</td></tr></table>
+
 <h2>2021</h2>
 <ol>
 <li><p><b>Breaking the Sample Complexity Barrier to Regret-Optimal Model-free Reinforcement Learning</b> <br />
@@ -218,7 +225,7 @@ W. Zhan*, S. Cen*, B. Huang, <u>Y. Chen</u>, J. D. Lee, Y. Chi, 2021. (*=equal c
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-24 22:01:20 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-24 22:08:56 EST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
