--- a/Group.html
+++ b/Group.html
@@ -50,7 +50,7 @@
 </li>
 <li><p><a href="https://whzhan99.github.io/">Wenhao Zhan</a> (ECE PhD student at Princeton, co-advised with Jason Lee)</p>
 </li>
-<li><p><a href="https://yz8479.mycpanel.princeton.edu/">Yuchen Zhou</a> (Postdoc)</p>
+<li><p><a href="https://yuchenzhou-stat.github.io/">Yuchen Zhou</a> (Postdoc)</p>
 </li>
 </ul>
 <h2>Alumni </h2>
@@ -77,7 +77,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-04-03 21:14:43 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-03 21:17:44 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Group.jemdoc">source</a>)
 </div>
 </div>
