--- a/large_scale_optimization/lectures.html
+++ b/large_scale_optimization/lectures.html
@@ -25,9 +25,24 @@
 <div id="subtitle"><a href="https://yuxinchen2020.github.io/">Yuxin Chen</a>, University of Pennsylvania, Fall 2023</div>
 </div>
 <p>These lecture notes will be updated frequently, and may contain typographical or even factual errors.</p>
+<ul>
+<li><p><a href="lectures/grad_descent_unconstrained.pdf">Gradient methods (unconstrained problems)</a> (last updated: 09/5)
+
+
+
+
+
+
+
+
+
+
+</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-08-28 21:47:16 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-09-05 09:41:18 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
