--- a/Publications_year.html
+++ b/Publications_year.html
@@ -72,7 +72,7 @@ Y. Zhou, <u>Y. Chen</u>,  2023 <a href="publications/tensor_clustering.pdf">[pap
 </p>
 </li>
 <li><p><b>Settling the Sample Complexity of Online Reinforcement Learning</b> <br />
-Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a>
+Z. Zhang, <u>Y. Chen</u>,  J. D. Lee, S. S. Du, 2023. <a href="publications/Optimal-OnlineRL.pdf">[paper]</a><a href="slides/Optimal_OnlineRL_slides.pdf">[slides]</a>
 </p>
 </li>
 <li><p><b>Towards Faster Non-Asymptotic Convergence for Diffusion-Based Generative Models</b> <br />
@@ -324,7 +324,7 @@ G. Li, <u>Y. Chen</u>, Y. Chi, Y. Gu, Y. Wei, <i>Neural Information Processing S
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-03-28 14:05:11 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-03-28 14:28:34 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 (<a href="Publications_year.jemdoc">source</a>)
 </div>
 </div>
